Code cleanup, fix many ide warnings